--- a/action.yml
+++ b/action.yml
@@ -32,7 +32,7 @@ runs:
       run: |
         if ! command -v AssetOrganizer &> /dev/null; then
           echo "Installing AssetOrganizer..."
-          curl -L https://github.com/mkemalgokce/AssetOrganizer/releases/download/v1.0.0/AssetOrganizer-v1.0.0-macos.zip -o AssetOrganizer.zip
+          curl -L https://github.com/mkemalgokce/AssetOrganizer/releases/download/v1.1.0/AssetOrganizer-v1.1.0.zip -o AssetOrganizer.zip
           unzip AssetOrganizer.zip
           chmod +x AssetOrganizer
           sudo mv AssetOrganizer /usr/local/bin/
